Logging: remove const from the lambda calling dladdr

In some OSes, the function takes a plain void*.

Fixes: QTBUG-106980
Change-Id: I810d70e579eb4e2c8e45fffd1718bdaf94d8ac0e
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 7d7d4671bd641634bd7ab8fd523ca96f7cda95ee)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>